# SoKAI

./: CMakeLists.txt  README.md  SoKAI.cc
data/: iris.csv
headers/: SKBackProp.h  SKColorScheme.h  SKFancyPlots.h  SKLayer.h  SKLibraries.h  SKModel.h  SKNeuron.h  SKPropagator.h  SKWeights.h  exc_energy.h
macros/cosmic_tracking/: cosmic_tracking.cc
macros/cross_sections_fission/: cross_sections_prediction.cc
macros/delta_fission/: eofx_generator_ia.C  function_regression_eofx.cc
macros/examples/classification/: SoKAI.cc
macros/examples/regression/: function_regression.cc
macros/knockout_reconstruction/: auto_training.bash  exp_data_full_reconstruction.cc  five_layer_models.txt  four_layer_models.txt  generate_models.C  knockout_classification.cc  knockout_reconstruction.cc  knockout_reconstruction_check.cc  knockout_reconstruction_five_layers.cc  knockout_reconstruction_four_layers.cc  knockout_reconstruction_three_layers.cc  three_layer_models.txt  train_model_5_layer_A1.bash  train_model_five.bash  train_model_four.bash  train_model_three.bash
macros/knockout_reconstruction/files/: U238_Fission_560AMeV_Experimental_Masses.root
macros/mass_reconstruction/: check_reconstruction.cc  mass_reconstruction.cc
macros/punch_through/: proton_reconstruction.cc  training_summary.txt
macros/quasifree_reconstruction/: exp_data_full_reconstruction.cc  proton_reconstruction.cc  quasifree_classification.cc  quasifree_classification_bigger.cc  quasifree_classification_check.cc  quasifree_classification_smaller.cc  quasifree_exc_energy.cc  quasifree_reconstruction.cc  quasifree_reconstruction_check.cc  quasifree_reconstruction_smaller.cc
macros/quasifree_reconstruction/files/: 238U_Quasifree_Exp_Data.root  U238_Quasifree_560AMeV_NN_chamber_train.root  U238_Quasifree_560AMeV_NN_chamber_train_realistic_weights.root  U238_Quasifree_560AMeV_NN_chamber_train_realistic_weights_discrete.root  U238_Quasifree_560AMeV_NN_test_chamber.root  angular_histograms.root
macros/tools/: correlation_matrix.txt  pca_eigenvalues.py
python_stuff/: angles_conv.py  conv_network.py  plain_network.py
sources/: SKBackProp.cxx  SKLayer.cxx  SKModel.cxx  SKNeuron.cxx  SKPropagator.cxx  SKWeights.cxx
